--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -41,10 +41,14 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
+	font-family: 'Avenir Next';
 	font-weight: $global-weight-normal;
+
+	small {
+		color: $dark-gray;
+	}
 }
 h1 {
-	font-family: 'Avenir Next';
 	font-weight: bold;
 	text-align: center;
 	margin-bottom: 32px;
@@ -59,6 +63,10 @@ a {
 }
 a:hover {
 	color: $primary-color;
+}
+
+small {
+	font-size: 70%;
 }
 
 .lead {
